temp_test/valid/structAssignOptim.wacc
# struct used before it has been defined

# Output:
#

# Program:

begin
  struct Person {int age; char grade;};
  struct Person bob = {20 * 5 +4, 'A'};
  int x = bob.age;
  println x
end