temp_test/invalid/structs/smallAssignment.wacc
# assign too few members to a struct

# Output:
#

# Program:

begin
  struct Person {int age; char grade;};
  struct Person mary = {20}
end